# MusicPlayer

./: CMakeLists.txt  README.md
qml/: Main.qml
src/: main.cpp  player.cpp  player.h
